--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf8" />
   <title>MoldON API V1</title>
   <link rel="icon" type="image/png" href="path_to_favicon"/>
+  <link rel="icon" type="image/png" href="path_to_favicon"/>
   <!-- needed for adaptive design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
